Bug 91917 - Clicking in the text or using Enter key does not move the cursor anymore
Summary: Clicking in the text or using Enter key does not move the cursor anymore
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.0.0.0.beta1
Hardware: x86-64 (AMD64) All
: highest critical
Assignee: Michael Stahl
URL:
Whiteboard: target:5.1.0 target:5.0.0.0.beta3
Keywords: regression
: 91928 91977 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-06-07 06:35 UTC by Jean-Baptiste Faure
Modified: 2016-10-25 19:24 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jean-Baptiste Faure 2015-06-07 06:35:17 UTC
With the last commits in the branch 5.0 clicking somewhere in the text does not move the cursor there. It works only if you make a selection.

Steps to reproduce:
1/ open a new empty text document in Writer
2/ type DT+F3 (autotext for dummy text) or something else long enough
==> the cursor is at the beginning of the text.
3/ click somewhere, for example in lines 4 or 5
==> the cursor does not move
4/ do a selection: click+drag then click ==> the cursor is moved at the end of the selection.

Tested with a new user profile.

Version: 5.0.0.0.beta1+
Build ID: 9b345e42d24b06a2b508e567e9ac0e361c3a576d
Ubuntu_15.04_x86-64
Locale: fr-FR (fr_FR.UTF-8)

Best regards. JBF
Comment 1 Jean-Baptiste Faure 2015-06-07 06:35:54 UTC
Worked one day ago ==> regression
Comment 2 Jean-Baptiste Faure 2015-06-07 14:41:48 UTC
Works as expected if I go back to this commit:
Version: 5.0.0.0.beta1+
Build ID: 1b3d17ba7cd45dc0431b9b1809d908a7a066d9a1
Ubuntu_15.04_x86-64
Locale: fr-FR (fr_FR.UTF-8)

Best regards. JBF
Comment 3 Jean-Baptiste Faure 2015-06-07 16:01:49 UTC
Well, the problem is in this commit:
https://gerrit.libreoffice.org/gitweb?p=core.git;a=commitdiff;h=4ae19cf8435d78bec75e1c4ea95da9f0aaf35b62

author	Michael Stahl <mstahl@redhat.com>	
	Fri, 5 Jun 2015 23:56:07 +0200 (23:56 +0200)
committer	Michael Stahl <mstahl@redhat.com>	
	Sat, 6 Jun 2015 00:35:56 +0200 (00:35 +0200)
SwCrsrShell::UpdateCrsr() calls SwTextFrm::GetCharRect(), which does
layout.  It happens that a SdrObject is moved around during layout,
which calls SwDrawContact::Changed(), which believes that there is
no layout active because there is no SwLayAction and
ViewShell::EndAction() has already been called, so we get recursive
layout-in-layout action.

Change-Id: Iad8df4910e3c661150bdf5ac7d777792e69a8f71
(cherry picked from commit 587006cac508616f486aea45e265a170bcccdc87)


Works as expected until the previous commit:
Build ID: 4d8acde1b820c2548839b1632bc28f2988001941

Best regards. JBF
Comment 4 Jean-Baptiste Faure 2015-06-08 07:50:12 UTC
Additionally: the Enter key create a new paragraph (visible if you show the non printable characters) but does not move the cursor in front of this new paragraph.

That make working with this build of LO-Writer not possible. So increasing the severity. ==> blocker.

Best regards. JBF
Comment 5 Buovjaga 2015-06-08 18:56:26 UTC
Confirmed.

Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+
Build ID: be8512f99bc9ab18e55aabe01cc0ab1e6baea9e6
TinderBox: Win-x86@39, Branch:master, Time: 2015-06-08_05:58:40
Locale: fi-FI (fi_FI)

Ubuntu 15.04 64-bit 
Version: 5.1.0.0.alpha1+
Build ID: 47cddc662efc470505f0b76427fa3092bae5550a
TinderBox: Linux-rpm_deb-x86_64@46-TDF-dbg, Branch:master, Time: 2015-06-07_00:54:53
Locale: en-US (en_US.UTF-8)
Comment 6 steve 2015-06-08 19:10:24 UTC
osx 10.10.3 latest nightly from today confirmed. OS → all

this is a blocker.
Comment 7 Jean-Baptiste Faure 2015-06-08 19:52:35 UTC
comment #4 -> summary adapted.

Best regards. JBF
Comment 8 Michael Stahl 2015-06-08 21:52:52 UTC
oops, fixed on master
Comment 9 Commit Notification 2015-06-08 21:53:45 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=238e07ddca879e0951bef6391fdc5c3fc26bded5

tdf#91917 tdf#91602: avoid layout recursion differently

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2015-06-08 21:55:13 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=73b303fc3693e7cdf457e617c252c10ef4620bd9&h=libreoffice-5-0

tdf#91917 tdf#91602: avoid layout recursion differently

It will be available in 5.0.0.0.beta3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Jean-Baptiste Faure 2015-06-09 04:52:35 UTC
Thank you very much !

Verified fixed in Version: 5.0.0.0.beta2+
Build ID: 45e1b4cad938a8ac1c865df527dcc536d4c80920
Ubuntu_15.04_x86-64
Locale: fr-FR (fr_FR.UTF-8)

built at home.

Best regards. JBF
Comment 12 Buovjaga 2015-06-09 04:56:08 UTC
Problem is gone now.

Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+
Build ID: d28102b1ed0c31500bbc68453a7b7613bd2bfa06
TinderBox: Win-x86@39, Branch:master, Time: 2015-06-09_01:06:39
Locale: fi-FI (fi_FI)
Comment 13 steve 2015-06-10 08:23:35 UTC
fixed on osx as well. Thanks.
Comment 14 steve 2015-06-10 09:33:28 UTC
*** Bug 91977 has been marked as a duplicate of this bug. ***
Comment 15 Cor Nouws 2015-06-10 11:37:58 UTC
*** Bug 91928 has been marked as a duplicate of this bug. ***