tdf#91917 tdf#91602: avoid layout recursion differently

(regression from 587006cac508616f486aea45e265a170bcccdc87)

Change-Id: I38e00a7469243088e25aa1a91e3581240b3bbdea